# renmo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: context.hpp  renderer_interface.hpp  renmo.h  renmo.hpp  scene_interace.hpp  window.hpp
src/: context.cpp  main.cpp  renderer_interface.cpp  window.cpp
